# tezla

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  _CoqProject  dune-project  flake.nix  michelscil.opam  tezla-adt.opam  tezla-adt.opam.template  tezla-converter.opam  tezla-converter.opam.template  tezla.opam  tezla.opam.template
.github/workflows/: main.yml
src/: ast.ml  converter.ml  dune  env.ml  env.mli  michelson_scil.mli
src/lib/: adt.ml  adt.mli  converter.ml  dune  env.ml  env.mli  functional_stack.ml  functional_stack.mli  pp.ml  tezla.ml  typer.ml
src/lib/adt/: adt.ml  adt.mli  dune  operation.ml  operation.mli  typ.ml  typ.mli  var.ml  var.mli
src/lib/converter/: converter.ml  dune  env.ml  env.mli  typer.ml
src/lib/converter/functional_stack/: dune  functional_stack.ml  functional_stack.mli  test.ml
src/lib/functional_stack/: dune  functional_stack.ml  functional_stack.mli
src/lib/interpreter/: dune  interpreter.ml  interpreter.ml#  stack_data.ml  stack_data.mli
src/test/: dune  test.ml
src/verified/: Adt.v  Common_adt.v  Edo_adt.v  Operation.v  Semantics.v  Store.v  Typ.v  Var.v  _CoqProject  dune
tests/: all_primitives.tz  exprtWtYRcsR8nq8afHZhNGcFJ67QmAf9LMbrqos73BfC8Wc3gfqUy.tz  exprtWtf2sgSqiTiy9sYsrnGBavs7NPr3iKuvtPx3yahE7YKDJY6b7.tz  exprtWu46v2SLsRWPraEoHX1yKRajrakUxh1CqVas1gtnPqSZVd1Qt.tz  exprtWuWvv7sLPXDrL6jkatkcjsMPGiPitqiEzabcKgd2t2JeXgDiN.tz  exprtWvkGV7SBJuvjePAqBDbBC7Tf8aPKwRPzJiVT7G8y6MSLpunWJ.tz  exprtWwcKqt9QqULCpg9YHBzBtyVZHUm3x1aAmzaF3ReE9joKSEHrD.tz  exprtWwzPG4XSithzqKcjYifG7HMY3QtEjRDGRx8pJYfBNsgp37d9E.tz  exprtWywqcNQk5cKbxfAWv5ZZ2VJtYjMBkmpU48ghzruH95HSas12C.tz  exprtWzeDpLhgaucivLeCAsWwwBo4PUMehnFSXKE8dKWtwNR52avRb.tz  exprtWzvip68oVQsCGqG18HBsX23eJS6SzVfAYrK6vgskZdbofC9VN.tz  exprtX12BThHiagzZnH8PqsqxLert4N5S1XGo7K2L8PMbd11dfTeDf.tz  exprtX1PEcX5GVcMGPJEgLu7owBxtRcVmRoWFoj1yLST5VPNwDhQyH.tz  exprtX1cHLKyio8bnee8y93Xz8KAQzrZuFWBdM8vmcZBHayNtHE7xQ.tz  exprtX1vYLAfSAKeAjeF2xJBEyFM8R296Wrg4NfC5zUkkCjYd3Rn4G.tz  exprtX2DfLq9yH2B9WoyF4RddTPA4DFX9J57tEHTqr7QYNWMKJ2w19.tz  exprtX2UqsjTSihZzbbdvv28y2d7X5achbsie316jgDGAnwzJeTrhk.tz  exprtX2iFwHfC686D1nPRNTxa8v1rLMrUJoUhBq6zYCtweSGtq6Xxb.tz  exprtX3HKwmhdMP4EdXEFhUScHKwKtoCXUp4DzT9iLfDD76pz7hYNQ.tz  exprtX3V6Jx56tpVnQRybcuui8yFHtobH9jgzaCpsCtw4wDvMj9ZUc.tz  exprtX3eHkdh8Qp56W1GCT4aPUp3zyyreMzF8Gptz43eUkQVxwbGkj.tz  exprtX5aqhMV2yuqBPyGrY9ZgVrFXZrA7y1Mnzfjn62PmHUmuX254H.tz  exprtX6JpKWPfNZx4eYCH17PvcxhxyXz7LjbGww91nP7Vq271y1bS9.tz  exprtX6XfdjJLkZ3bXPuQbqorWtummB4YoDyBj4cFbS6YvAt5FC1XU.tz  exprtX6ipE5owRWmiTjQF1sH3KMGA7bVd1rAxhx8zpJ4Ex8f42ujMX.tz  exprtX7CJK2UyMqoSpiuH99PySesZvdnCDvRtjfKjRG9rfU5RRzNBQ.tz  exprtX7ygCBknRaLgLXoywtFGQj4BMGzzesRHobwA6j9ouUqHy9haR.tz  exprtX8Q1deAKbZBHopB6uQaCcgECNe7Qx6hJEVXp2JBRr6P6pG2JN.tz  exprtX8kJsqfhKPUMjk1CGqXRzv9BvB887dZfwYwMMoB6vKiNATkxH.tz  exprtX95Ko4D2SUVdEbADRhd6ajTp1THNfvLRFKjLBbP6P3N5HaXoW.tz  exprtXAjo8N7GPa3zf1MtF3RCdNe4bZ47mvu8EyHNNDxHJyM4gHMaX.tz  exprtXC3WpeABz4qBYsci5UayDTHrGUczh3e8uf4Lw81ecjBewHRXL.tz  exprtXCtb1j652SMYtUVD9wq4DpG5CSjdnSQ2JQ1Yp9dWFwNh3Q3ae.tz  exprtXCwtWPxWntWbZySucAWYyAQpqcTRynwAwayimYxCj4VFuVZND.tz  exprtXD1aYALaCZUTERA7eSgrxyByhqwgoQewCsnyPuL5gferxfRNU.tz  exprtXDBuqWtW5rY96Q2sAS1kpxMHHHcPW8zuprmgWf7okqRZ172Zh.tz  exprtXEFirH5yma3CLS8syQXB5Dw6AuR1yTdBy4kwjxVARjmYXuxjM.tz  exprtXENmyiV4hzRDNhKGVJqcGwmUBbJhV3zaq8SPj3Jmy5xgFARzC.tz  exprtXEsXbt4ExD78RAq8mbjNg2LWM7mmhaV7yC6KAPSJjfUc3TU4T.tz  exprtXGQo4a2hrytCnC9guuteJd9JU4nLhwoPiWxUamcTRE8A1QGqa.tz  (+8826 more)
verified/: Adt.v  Common_adt.v  Edo_adt.v  Operation.v  Var.v
(+10 files in other folders)
