(library
 (name functional_stack)
 (public_name tezla-converter.functional_stack)
 (modules functional_stack)
 (libraries containers zarith)
 (preprocess
  (pps ppx_inline_test)))

(test
 (name test)
 (modules test)
 (libraries
  containers
  tezla-converter.functional_stack
  alcotest
  qcheck
  qcheck-alcotest))
